--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Shared/_Layout.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
                                 <a class="nav-link" href="@Url.Action("Login", "Auth")">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("Register", "Auth")">Register</a>
+                                <a class="nav-link" href="@Url.Action("Signup", "Auth")">Register</a>
                             </li>
                         }
                     </ul>
