--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/LabTests/Delete.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/LabTests/Delete.cshtml
@@ -8,24 +8,22 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Lab Test</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">Test ID</dt>
-        <dd class="col-sm-10">@Model.TestId</dd>
-        <dt class="col-sm-2">Patient Name</dt>
-        <dd class="col-sm-10">@(Model.Patient.FirstName + " " + Model.Patient.LastName)</dd>
         <dt class="col-sm-2">Test Name</dt>
         <dd class="col-sm-10">@Model.TestName</dd>
         <dt class="col-sm-2">Test Date</dt>
-        <dd class="col-sm-10">@Model.TestDate.ToString("yyyy-MM-dd")</dd>
-        <dt class="col-sm-2">Results</dt>
-        <dd class="col-sm-10">@Model.Results</dd>
+        <dd class="col-sm-10">@Model.TestDate.ToString("g")</dd>
+        <dt class="col-sm-2">Patient</dt>
+        <dt class="col-sm-2">Patient</dt>
+        <dd class="col-sm-10">
+            @(Model.Patient?.FirstName + " " + Model.Patient?.LastName ?? "Unknown Patient")
+        </dd>
     </dl>
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="TestId" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
