--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/LabTests/Details.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/LabTests/Details.cshtml
@@ -7,30 +7,28 @@
 <h1>Lab Test Details</h1>
 
 <div>
-    <h4>Lab Test</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">Test ID</dt>
-        <dd class="col-sm-10">@Model.TestId</dd>
-        <dt class="col-sm-2">Patient Name</dt>
-        <dd class="col-sm-10">@(Model.Patient.FirstName + " " + Model.Patient.LastName)</dd>
         <dt class="col-sm-2">Test Name</dt>
         <dd class="col-sm-10">@Model.TestName</dd>
         <dt class="col-sm-2">Test Date</dt>
-        <dd class="col-sm-10">@Model.TestDate.ToString("yyyy-MM-dd")</dd>
+        <dd class="col-sm-10">@Model.TestDate.ToString("g")</dd>
+        <dt class="col-sm-2">Patient</dt>
+        <dd class="col-sm-10">@(Model.Patient?.FirstName + " " + Model.Patient?.LastName ?? "Unknown Patient")</dd>
+        <dt class="col-sm-2">Appointment ID</dt>
+        <dd class="col-sm-10">@(Model.AppointmentId.HasValue ? Model.AppointmentId.ToString() : "None")</dd>
         <dt class="col-sm-2">Results</dt>
         <dd class="col-sm-10">@Model.Results</dd>
         <dt class="col-sm-2">Created By</dt>
-        <dd class="col-sm-10">@Model.CreatedBy</dd>
+        <dd class="col-sm-10">@(Model.CreatedBy ?? "Unknown")</dd>
         <dt class="col-sm-2">Created Date</dt>
-        <dd class="col-sm-10">@Model.CreatedDate?.ToString("yyyy-MM-dd HH:mm:ss")</dd>
+        <dd class="col-sm-10">@(Model.CreatedDate?.ToString("g") ?? "N/A")</dd>
     </dl>
 </div>
 <div>
-    @if (User.IsInRole("Doctor") || User.IsInRole("Admin"))
+    @if (User.IsInRole("Admin") || User.IsInRole("Doctor"))
     {
         <a asp-action="Edit" asp-route-id="@Model.TestId" class="btn btn-warning">Edit</a>
-        <a asp-action="Delete" asp-route-id="@Model.TestId" class="btn btn-danger">Delete</a>
     }
     <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
