--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Admin/Index.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Admin/Index.cshtml
@@ -54,6 +54,20 @@
                             <div class="active-pulse"></div>
                         </a>
                     </li>
+                    <li class="nav-item hover-glow">
+                        <a class="nav-link @(ViewContext.RouteData.Values["controller"]?.ToString() == "LabeTests" ? "active" : "")"
+                           href="@Url.Action("Index", "LabTests")">
+                            <i class="fas fa-user-oatient me-2"></i> Clinics
+                            <div class="active-pulse"></div>
+                        </a>
+                    </li>
+                    <li class="nav-item hover-glow">
+                        <a class="nav-link @(ViewContext.RouteData.Values["controller"]?.ToString() == "MedicalRecord" ? "active" : "")"
+                           href="@Url.Action("Index", "MedicalRecord")">
+                            <i class="fas fa-user-doctor me-2"></i> MedicalRecord
+                            <div class="active-pulse"></div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -75,7 +89,9 @@
                 new { Title = "Doctors", Icon = "fa-user-doctor", Description = "Manage medical staff", Controller = "Doctor", Color = "success" },
                 new { Title = "Staff", Icon = "fa-users", Description = "Manage clinic staff", Controller = "Staff", Color = "warning" },
                 new { Title = "Patients", Icon = "fa-hospital-user", Description = "Manage patient records", Controller = "Patient", Color = "danger" },
-                new { Title = "Appointment", Icon = "fa-calendar-check", Description = "Manage patients appointments", Controller = "Appointment", Color = "Primary" }
+                new { Title = "Appointment", Icon = "fa-calendar-check", Description = "Manage patients appointments", Controller = "Appointment", Color = "Primary" },
+                new { Title = "LabTests", Icon = "fa-user-doctor", Description = "Manage patients Lab Tests", Controller = "LabTests", Color = "success" },
+                new { Title = "MedicalRecord", Icon = "fa-user-doctor", Description = "Manage patients Medical Records", Controller = "MedicalRecord", Color = "success" }
                 })
                 {
                     <div class="col-xxl-3 col-lg-6">
