--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Clinic/Edit.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Clinic/Edit.cshtml
@@ -10,6 +10,9 @@
 <div class="row">
     <div class="col-md-6">
         <form asp-action="Edit">
+            <!-- Add hidden input for ClinicId -->
+            <input type="hidden" asp-for="ClinicId" />
+
             <div class="form-group">
                 <label asp-for="ClinicName" class="control-label"></label>
                 <input asp-for="ClinicName" class="form-control"
@@ -58,6 +61,8 @@
         </div>
     </div>
 </div>
+
+<!-- Existing styles and scripts remain unchanged -->
 <style>
     .suggestion-card {
         margin-top: 2rem;
