--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Home/Index.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Home";
     Layout = "~/Views/Shared/_generatedView.cshtml";
+    Layout = "~/Views/Shared/_layout.cshtml";
 }
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
@@ -71,8 +72,6 @@
                 </div>
             </div>
         </div>
-        <!-- Departments Card (Clickable) -->
-        <!-- Doctors Card (Clickable) -->
         <div class="col">
             <a href="@Url.Action("Index", "DepartmentView")" class="card h-100 text-center text-decoration-none">
                 <div class="card-body">
