Potential issue fixed

--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Home/Index.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model OutpatientClinic.Presentation.Models.LandingPageViewModel
 @{
     ViewData["Title"] = "Home";
-    Layout = "~/Views/Shared/_generatedView.cshtml";
+    //Layout = "~/Views/Shared/_generatedView.cshtml";
     Layout = "~/Views/Shared/_layout.cshtml";
 }
 
